--- a/index.html
+++ b/index.html
@@ -265,47 +265,53 @@
 	
 
 <h2>Academic Services</h2>
-  <h3>Conferences</h3>
+  <h3>Conference PC Member and Reviewer</h3>
     	<ul>
-		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS) 2023.</li>
-		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD) 2023.</li>
-		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
-		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
-		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022-2023.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>, <font color=red>Session Chair at ADS</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2023.</li>
-		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
-		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM) 2022.</li>
-		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
-		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData) 2021-2023.</li>
-		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM) 2021-2023.</li>
-		<li type="disc"> [PC Member] International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
-		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC) 2023.</li>
-		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
-		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
-		<li type="disc"> [TPC member] International Conference on Networks, Communication and Information Technology (NCIT) 2023. </li>
+		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS), 2023.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2020-2023.</li>
+		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD), 2023.</li>
+		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI), 2023.</li>
+		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV), 2023.</li>
+		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM), 2022-2023.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData), 2021-2023.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM), 2021-2023.</li>
+		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI), 2022.</li>
+		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM), 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM), 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Artificial Intelligence and Statistics (AISTATS), 2021.</li>
+		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC), 2023.</li>
+		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN), 2022.</li>
+		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML), 2022.</li>
+		<li type="disc"> [TPC member] International Conference on Networks, Communication and Information Technology (NCIT), 2023. </li>
 	</ul>
-  <h3>Workshops</h3>
+  <h3>Workshop Reviewer</h3>
 	<ul>
 		<li type="disc"> [Reviewer] ICML Workshop on Structured Probabilistic Inference & Generative Modeling (SPIGM), 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [Reviewer] AutoML Workshop on Late-Breaking, 2022.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
+		<li type="disc"> [Reviewer] AutoML Workshop on Late-Breaking, 2022.</li>
 		<li type="disc"> [Reviewer] NeurIPS Workshop on Meta-Learning, 2021.</li>
 	</ul>
-  <h3>Journals</h3>
+  <h3>Journal Reviewer</h3>
     	<ul>
 		<li type="disc"> [Reviewer] Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
+		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2023. </li>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
-		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
-		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2023. </li>
 		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science, 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Big Data Research (JBDR), 2020. </li>
 	</ul>
+  <h3>Others</h3>
+	<ul>
+		<li type="disc"> [<font color=red>Session Chair at ADS</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
+		<li type="disc"> [Mentor at KDD-UC] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
+		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
+	</ul>
+
 
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
